<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chatt</string>
    <string name="type_msg">Type message</string>    
    
<string name="drawer_open">Open</string>
<string name="drawer_close">Close</string>
    
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="displayName">Display Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="forgot_my_pwd">I’ve forgotten my password?</string>
    <string name="my_chats">My Chats</string>
    <string name="all_chats">All Chats</string>
    <string name="search">Search</string>
    <string name="to">To:</string>
    <string name="edit">Edit</string>
    <string name="new_chat">New Chat</string>
    <string name="alert_wait">Please wait...</string>
    <string name="err_fields_empty">Please fill all the fields.</string>
    <string name="err_singup">Error occurred while signup:</string>
    <string name="err_login">Error occurred while login:</string>
    <string name="err_users">Error occurred while finding users:</string>
<string name="alert_loading">Loading...</string>
<string name="msg_no_user_found">No users found for chat!</string>
    <string name="delivered_text">Delivered</string>
    <string name="sending_text">Sending...</string>
    <string name="failed_text">Failed</string>
    
    <string name="book">&#xf02d;</string>
    <string name="game">&#xf11b;</string>
    <string name="question">&#xf29c;</string>
    <string name="lock">&#xf13e;</string>
    <string name="slient">&#xf028;</string>
</resources>