<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:paddingBottom="@dimen/pad_20dp"
        android:paddingLeft="@dimen/pad_15dp"
        android:paddingRight="@dimen/pad_15dp"
        android:paddingTop="@dimen/pad_20dp" >

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/lockicon"
            android:layout_marginTop="@dimen/pad_5dp"/>

        <EditText
            android:id="@+id/user"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_5dp"
            android:textColor="@color/colorAccentt"
            android:drawableLeft="@drawable/ic_username"
            android:hint="Email" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/pwd"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pad_20dp"
            android:layout_marginTop="@dimen/pad_5dp"
            android:textColor="@color/colorAccentt"
            android:drawableLeft="@drawable/ic_pwd"
            android:hint="@string/password"
            android:inputType="textPassword" >
        </EditText>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="200dp"
            android:layout_height="@dimen/pad_20dp"
            android:textColor="@color/white"
            android:text="Beni hatırla"/>

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

            <Button
                android:id="@+id/btnLogin"
                style="@style/btn_white_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/pad_20dp"
                android:text="@string/log_in" />

            <Button
                android:id="@+id/btnReg"
                style="@style/btn_white_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register"
                android:layout_marginTop="@dimen/pad_20dp"
                android:layout_marginLeft="@dimen/pad_10dp"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>